--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body bgcolor="pink"> <br>
 <a href="colors.html">Colores</a><br>
-<a href="/vinculo/links.html">lins</a><br>
+<a href="/links.html">lins</a><br>
 <a href="texto.html">Tipos de texto</a><br>
 
 </body>
