--- a/texto.html
+++ b/texto.html
@@ -57,7 +57,7 @@
 <img src="/Screenshot_20240307-235814.jpg" alt="/Screenshot_20240307-235814.jpg">
 
 <video controls src="/Hola/89ad078516915ffc6833d96109c64078.mp4" width="500" height="500" autoplay loop="Num|infinite" poster="/Screenshot_20240307-235814.jpg" ></video>
-<audio controls src="/Hola/ssstik.io_1709524249776.mp3" autoplay loop="Num|infinte"></audio>
+<audio controls src="/ssstik.io_1709524249776.mp3" autoplay loop="Num|infinte"></audio>
 
 
 <table border="1" width"100%" >
